syntax = "proto3";

package getstrm.pace.api.global_transforms.v1alpha;

import "buf/validate/validate.proto";
import "getstrm/pace/api/entities/v1alpha/entities.proto";
import "google/api/annotations.proto";

option go_package = "github.com/getstrm/pace/protos/global_transforms;global_transforms";
option java_multiple_files = true;
option java_package = "com.getstrm.pace.api.global_transforms.v1alpha";

// TODO HTTP paths should be defined
// TODO add validations
service GlobalTransformsService {
  rpc GetGlobalTransform(GetGlobalTransformRequest) returns (GetGlobalTransformResponse);
  rpc ListGlobalTransforms(ListGlobalTransformsRequest) returns (ListGlobalTransformsResponse) {
    option (google.api.http) = {get: "/global-transforms"};
  }
  rpc UpsertGlobalTransform(UpsertGlobalTransformRequest) returns (UpsertGlobalTransformResponse);
  rpc DeleteGlobalTransform(DeleteGlobalTransformRequest) returns (DeleteGlobalTransformResponse);
}

message GetGlobalTransformRequest {
  entities.v1alpha.GlobalTransform.RefAndType ref_and_type = 1;
}

message GetGlobalTransformResponse {
  entities.v1alpha.GlobalTransform transform = 1;
}

message ListGlobalTransformsRequest {
  repeated string types = 1; // TODO PACE-17 add validation to check whether the types are allows oneof transform enum types
}

message ListGlobalTransformsResponse {
  repeated entities.v1alpha.GlobalTransform global_transforms = 1;
}

message UpsertGlobalTransformRequest {
  entities.v1alpha.GlobalTransform transform = 1;
}

message UpsertGlobalTransformResponse {
  entities.v1alpha.GlobalTransform transform = 1;
}

message DeleteGlobalTransformRequest {
  repeated entities.v1alpha.GlobalTransform.RefAndType ref_and_types = 1;
}

message DeleteGlobalTransformResponse {
  uint32 deleted_count = 1;
}
